一些基本设置的修改

--- a/route.yaml
+++ b/route.yaml
@@ -8,3 +8,4 @@
 /api/team/selectTeamCode: /team/selectTeamCode
 /api/team/updateTeamCode: /team/updateTeamCode
 /api/team/joinTeam: /team/joinTeam
+/api/team/selectAllTeams: /team/selectAllTeams
