修改了一些基本的配置

--- a/route.yaml
+++ b/route.yaml
@@ -9,3 +9,4 @@
 /api/team/updateTeamCode: /team/updateTeamCode
 /api/team/joinTeam: /team/joinTeam
 /api/team/selectAllTeams: /team/selectAllTeams
+/api/work/createReport: /work/createReport
