增加了两个转发路径

--- a/route.yaml
+++ b/route.yaml
@@ -10,3 +10,5 @@
 /api/team/joinTeam: /team/joinTeam
 /api/team/selectAllTeams: /team/selectAllTeams
 /api/work/createReport: /work/createReport
+/api/work/getReport: /work/getReport
+/api/work/getReportInfos: /work/getReportInfos
