--- a/route.yaml
+++ b/route.yaml
@@ -12,3 +12,4 @@
 /api/work/createReport: /work/createReport
 /api/work/getReport: /work/getReport
 /api/work/getReportInfos: /work/getReportInfos
+/api/work/test: /test
